--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm bg-light">
   <div class="container-fluid">
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="loginService.canActivate()">
         <a [routerLink]="['create']" class="nav-link" routerLinkActive="active">
           Create Product
         </a>
@@ -11,6 +11,14 @@
           Products
         </a>
       </li>
+      <li class="nav-item">
+        <a *ngIf="loginService.canActivate() === false;else logout" [routerLink]="['login']" class="nav-link">Login</a>
+      </li>
+      <ng-template #logout>
+        <li class="nav-item">
+          <a class="nav-link" (click)="loginService.logout()">Logout</a>
+        </li>
+      </ng-template>
     </ul>
   </div>
 </nav>
