--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,12 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item" *ngIf="loginService.canActivate()">
-        <a [routerLink]="['create']" class="nav-link" routerLinkActive="active">
-          Create Product
+        <a [routerLink]="['customers']" class="nav-link" routerLinkActive="active">
+          Customers
         </a>
       </li>
       <li class="nav-item">
-        <a [routerLink]="['']" class="nav-link" routerLinkActive="active">
+        <a [routerLink]="['products']" class="nav-link" routerLinkActive="active">
           Products
         </a>
       </li>
@@ -23,5 +23,6 @@
   </div>
 </nav>
 <div class="container">
+  <h1>Products & Customers Management</h1><br>
   <router-outlet></router-outlet>
 </div>
